--- a/src/app/components/category/category-list/category-list.component.html
+++ b/src/app/components/category/category-list/category-list.component.html
@@ -252,11 +252,7 @@
         </div>
         <div class="modal-body" tabindex="0" ngbAutofocus>
 
-          <form
-          id="fo"
-          [formGroup]="CreateNewCategoryForm"
-          (ngSubmit)="CreateNewCategoryMethod()"
-          >
+          <form id="fo" [formGroup]="CreateNewCategoryForm" (ngSubmit)="CreateNewCategoryMethod()">
                   <!-- English Input  -->
         <label>Category Name (English): </label>
         <div class="form-group">
