--- a/src/app/components/home/home-list/home-new.component.html
+++ b/src/app/components/home/home-list/home-new.component.html
@@ -79,7 +79,7 @@
         
           <div class="col-xl-6 col-12">
             <div class="card">
-              <div class="card-header flex-column align-items-start">
+              <div class="card-header flex-column align-items-start" >
                 <h4 class="card-title mb-75">Store </h4>
                 <span class="card-subtitle text-muted">Full report on stores </span>
               </div>
@@ -116,11 +116,8 @@
                 <div id="radialbar-chart" #apexRadialChartRef>
                   <apx-chart
                     [series]="apexRadialChart?.series"
-                    [chart]="{
-                      height: 400,
-                      width: isMenuToggled === false ? apexRadialChartRef?.offsetWidth : apexRadialChart?.chart.width,
-                      type: 'radialBar'
-                    }"
+                    [chart]="{height: 400,
+                    width: isMenuToggled === false ? apexRadialChartRef?.offsetWidth : apexRadialChart?.chart.width, type: 'radialBar'}" 
                     [plotOptions]="apexRadialChart?.plotOptions"
                     [labels]="apexRadialChart?.labels"
                     [colors]="apexRadialChart?.colors"
@@ -131,14 +128,8 @@
               </div>
             </div>
           </div>
-  
-  
-  
         </div>
       </section>
       <!-- Basic Alerts end -->
     </div>
   </div>
-  
-  
-  
