--- a/src/app/components/status-manager/reject-list/reject-list.component.html
+++ b/src/app/components/status-manager/reject-list/reject-list.component.html
@@ -17,6 +17,7 @@
   </label>
 </div>
 
+<!-- Table of Contents -->
 <div class="table-responsive" *ngIf="rejectData.length > 0">
   <table class="table text-center table-striped">
     <thead>
@@ -99,6 +100,7 @@
   </div>
 </div>
 
+<!-- Paginator -->
 <div class="d-flex justify-content-between align-items-center mt-3">
   <span>{{ rejectData.length }} total</span>
   <div>
