Updata Category store

--- a/src/app/components/status-manager/pending-list/pending-list.component.html
+++ b/src/app/components/status-manager/pending-list/pending-list.component.html
@@ -105,7 +105,7 @@
   </div>
 </div>
 
-<!-- Upload Photo Modal -->
+<!-- Paginator -->
 <div class="d-flex justify-content-between align-items-center mt-3">
   <span>{{ pendingData.length }} total</span>
   <div>
