--- a/src/app/components/status-manager/pending-list/pending-list.component.html
+++ b/src/app/components/status-manager/pending-list/pending-list.component.html
@@ -63,7 +63,7 @@
               <a ngbDropdownItem (click)="onApprove(item.id)">
                 <span [data-feather]="'check'" [size]="16" class="mr-50 text-success"></span>Accept
               </a>
-              <a ngbDropdownItem (click)="onReject(item.id)">
+              <a ngbDropdownItem (click)="RejectTransaction(item.id)">
                 <span [data-feather]="'x'" [size]="16" class="mr-50 text-danger"></span>Reject
               </a>
             </div>
@@ -92,18 +92,18 @@
         <form>
           <div class="form-group">
             <label for="photoInput">Select a photo to upload:</label>
-            <input type="file" id="photoInput" (change)="uploadPhoto(selectedTransactionId, $event)" class="form-control" accept="image/*"/>
+            <input type="file" id="photoInput" (change)="uploadPhoto($event)" class="form-control" accept="image/*"/>
           </div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closeModal()">
-          Close
-        </button>
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
       </div>
     </div>
   </div>
 </div>
+
+
 
 <!-- Paginator -->
 <div class="d-flex justify-content-between align-items-center mt-3">
