--- a/src/app/components/status-manager/reject-list/reject-list.component.html
+++ b/src/app/components/status-manager/reject-list/reject-list.component.html
@@ -82,14 +82,14 @@
       <div class="modal-header">
         <h5 class="modal-title">Upload Photo</h5>
         <button type="button" class="close" (click)="closeModal()">
-          <span>&times;</span>
+          <span [data-feather]="'x'" [size]="16" class=""></span>
         </button>
       </div>
       <div class="modal-body">
         <form>
           <div class="form-group">
             <label for="photoInput">Select a photo to upload:</label>
-            <input type="file" id="photoInput" (change)="uploadPhoto(selectedTransactionId, $event)" class="form-control" accept="image/*" />
+            <input type="file" id="photoInput" (change)="uploadPhoto($event)" class="form-control" accept="image/*"/>
           </div>
         </form>
       </div>
