--- a/src/app/components/status-manager/pending-list/pending-list.component.html
+++ b/src/app/components/status-manager/pending-list/pending-list.component.html
@@ -14,12 +14,12 @@
   
   <label class="d-flex align-items-center">
     Search:
-    <input [(ngModel)]="searchValue" name="searchValue" type="search" class="form-control mx-2" (keyup)="filterUpdate()"/>
+    <input [(ngModel)]="searchValue" name="searchValue" type="search" class="form-control mx-2" (keyup)="filterUpdate()" />
   </label>
 </div>
 
 <!-- Table of Contents -->
-<div class="table-responsive" *ngIf="pendingData.length > 0">
+<div class="table-responsive" *ngIf="displayedData.length > 0">
   <table class="table text-center table-striped">
     <thead>
       <tr>
@@ -27,14 +27,12 @@
         <th (click)="sortData('amount')">Amount</th>
         <th (click)="sortData('payment_type')">Payment Type</th>
         <th (click)="sortData('transaction_type')">Transaction Type</th>
-        <th (click)="sortData('attachment')">Attachment</th>
         <th (click)="sortData('wallet_id')">Wallet ID</th>
         <th (click)="sortData('wallet_type')">Wallet Type</th>
         <th (click)="sortData('wallet_phone')">Wallet Phone</th>
         <th (click)="sortData('status')">Status</th>
         <th (click)="sortData('store')">Store</th>
         <th (click)="sortData('created_at')">Creation Date</th>
-        <th (click)="sortData('approve_date')">Action Date</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -44,16 +42,12 @@
         <td>{{ item.amount }}</td>
         <td>{{ item.payment_type }}</td>
         <td>{{ item.transaction_type }}</td>
-        <td>
-          <img loading="lazy" [src]="item.attachment" style="max-height: 75px;">
-        </td>
         <td>{{ item.wallet_id }}</td>
         <td>{{ item.wallet_type }}</td>
         <td>{{ item.wallet_phone }}</td>
         <td>{{ item.status }}</td>
         <td>{{ item.store }}</td>
-        <td>{{ item.created_at | date : "short" }}</td>
-        <td>{{ item.approve_date | date : "short" }}</td>
+        <td>{{ item.created_at | date: 'short' }}</td>
         <td>
           <div ngbDropdown container="body">
             <button ngbDropdownToggle type="button" class="btn icon-btn btn-sm hide-arrow text-white" rippleEffect>
@@ -63,7 +57,7 @@
               <a ngbDropdownItem (click)="onApprove(item.id)">
                 <span [data-feather]="'check'" [size]="16" class="mr-50 text-success"></span>Accept
               </a>
-              <a ngbDropdownItem (click)="RejectTransaction(item.id)">
+              <a ngbDropdownItem (click)="onReject(item.id)">
                 <span [data-feather]="'x'" [size]="16" class="mr-50 text-danger"></span>Reject
               </a>
             </div>
@@ -74,12 +68,12 @@
   </table> 
 </div>
 
-<div *ngIf="pendingData.length == 0">
+<div *ngIf="displayedData.length === 0">
   <h3 class="text-center">No Pending Transactions</h3>
 </div>
 
 <!-- Upload Photo Modal -->
-<div class="modal fade" id="uploadPhotoModal" tabindex="-1" role="dialog" [ngClass]="{ show: showModal }" [style]="showModal ? 'display:block' : 'display:none'">
+<div class="modal fade" id="uploadPhotoModal" tabindex="-1" role="dialog" [ngClass]="{ show: showModal }" [style.display]="showModal ? 'block' : 'none'">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -92,7 +86,7 @@
         <form>
           <div class="form-group">
             <label for="photoInput">Select a photo to upload:</label>
-            <input type="file" id="photoInput" (change)="uploadPhoto($event)" class="form-control" accept="image/*"/>
+            <input type="file" (change)="uploadPhoto($event)" class="form-control" accept="image/*" />
           </div>
         </form>
       </div>
@@ -103,8 +97,6 @@
   </div>
 </div>
 
-
-
 <!-- Paginator -->
 <div class="d-flex justify-content-between align-items-center mt-3">
   <span>{{ pendingData.length }} total</span>
@@ -113,12 +105,12 @@
       <ul class="pagination">
         <li class="page-item" [class.disabled]="currentPage === 1">
           <button class="page-link" (click)="skipBack()" aria-label="Previous">
-            <span [data-feather]="'skip-back'" [size]="18.5" class=""></span>
+            <span [data-feather]="'skip-back'" [size]="18.5"></span>
           </button>
         </li>
         <li class="page-item" [class.disabled]="currentPage === 1">
           <button class="page-link" (click)="prevPage()" aria-label="Previous">
-            <span [data-feather]="'chevron-left'" [size]="18.5" class=""></span>
+            <span [data-feather]="'chevron-left'" [size]="18.5"></span>
           </button>
         </li>
         <li class="page-item" *ngFor="let page of getPagesArray()" [class.active]="currentPage === page">
@@ -126,12 +118,12 @@
         </li>
         <li class="page-item" [class.disabled]="currentPage * selectedOption >= pendingData.length">
           <button class="page-link" (click)="nextPage()" aria-label="Next">
-            <span [data-feather]="'chevron-right'" [size]="18.5" class=""></span>
+            <span [data-feather]="'chevron-right'" [size]="18.5"></span>
           </button>
         </li>
         <li class="page-item" [class.disabled]="currentPage * selectedOption >= pendingData.length">
           <button class="page-link" (click)="skipForward()" aria-label="Next">
-            <span [data-feather]="'skip-forward'" [size]="18.5" class=""></span>
+            <span [data-feather]="'skip-forward'" [size]="18.5"></span>
           </button>
         </li>
       </ul>
